# oracle

./: .gitignore  deploy.py  index.py  llm.py  main.py  production.py  pyproject.toml  server_setup.sh  setup.py  store.py
templates/: base.html  index.html
