[tool.poetry]
name = "oracle"
version = "0.1.0"
description = "LLM App"
authors = ["Olivier <ducrouxolivier@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.3,<3.12"
accelerate = "^0.24.1"
torch = "^2.1.0"
llama-index = "^0.8.59"
flask-socketio = "^5.3.6"
flask = "^3.0.0"
ipdb = "^0.13.13"
transformers = "^4.35.0"
huggingface-hub = "0.16.4"
beautifulsoup4 = "^4.12.2"
paramiko = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
